# EDA_Application

./: .gitignore  README.md  app.py  app.yml  eda_data_processing.py  eda_excel_app.py  eda_excel_generation.py  pyproject.toml  requirements.txt
.github/workflows/: databricks_deployment.yml
.streamlit/: config.toml
src/: __init__.py  app.py  eda_data_processing.py  eda_excel_app.py  eda_excel_generation.py
src/data_preperation/: __init__.py  eda_data_processing.py  eda_excel_app.py  eda_excel_generation.py
src/eda_app/: eda_data_processing.py  eda_excel_app.py  eda_excel_generation.py
src/eda_generation/: __init__.py  eda_data_processing.py  eda_excel_app.py  eda_excel_generation.py  eda_ppt_generation.py
src/utlis/: state.py
