[project]
name = "eda-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "anyio>=4.9.0",
    "arrow>=1.3.0",
    "asttokens>=3.0.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "fqdn>=1.5.1",
    "fsspec>=2025.7.0",
    "Jinja2>=3.1.6",
    "joblib>=1.5.1",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "pydeck>=0.9.1",
    "python-dotenv>=1.1.0",
    "python-pptx>=1.0.2",
    "streamlit>=1.47.0",
    "XlsxWriter>=3.2.3",
    "xlwings>=0.33.16",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
